@startuml

title __ENTITY's Package Diagram__\n

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class DiaryEntry {
          - id : int
          - foodId : int
          - portionSize : double
          - diemId : int
          + DiaryEntry()
          + getFoodId()
          + getId()
          + getPortionSize()
          + setId()
          + setFoodId()
          + getDiemId()
          + setDiemId()
          + setPortionSize()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class Diem {
          - id : int
          - date : String
          ~ diemDate : Date
          + getDiemDate()
          + setDiemDate()
          + Diem()
          + getId()
          + setId()
          + getDate()
          + setDate()
          + toString()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class DiemAndEntry {
          + relDiaryList : List<DiaryEntry>
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class EntryDiemFood {
          + relDiaryList : List<DiaryEntry>
          + relFood : List<Food>
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class Food {
          - id : int
          - name : String
          - gramsSugar : double
          - foodTypeId : int
          + Food()
          + setId()
          + getId()
          + setName()
          + getGramsSugar()
          + setGramsSugar()
          + setFoodTypeId()
          + getName()
          + getFoodTypeId()
          + getFood()
          + toString()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class FoodAndEntry {
          + relEntryList : List<DiaryEntry>
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class FoodAndType {
          + food : List<Food>
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class FoodType {
          - id : int
          - type : String
          - description : String
          + FoodType()
          + setId()
          + getId()
          + getType()
          + setType()
          + setDescription()
          + getDescription()
          + toString()
      }
    }
  }
  

  package com.shneddy.dietdiary {
    package com.shneddy.dietdiary.entity {
      class TypeAndFood {
          + relFoodList : List<Food>
      }
    }
  }
  

  DiemAndEntry o-- Diem : diem
  EntryDiemFood o-- Diem : diem
  FoodAndEntry o-- Food : food
  FoodAndType o-- FoodType : foodType
  TypeAndFood o-- FoodType : foodType

@enduml
